--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -48,7 +48,7 @@
               <div class="row g-2">
                 <div class="col-12">
                   <label class="form-label mb-1">Clase válida</label>
-                  <select id="validClass" class="form-select">
+                  <select id="validClass" name="clasevalidada" class="form-select">
                     <option value="Palta" selected>Palta</option>
                     <option value="Mandarina">Mandarina</option>
                     <option value="Otro">Otro</option>
@@ -56,7 +56,7 @@
                 </div>
                 <div class="col-12">
                   <label for="threshold" class="form-label">Umbral de confianza: <span id="thVal">0.50</span></label>
-                  <input type="range" class="form-range" min="0" max="1" step="0.01" value="0.50" id="threshold">
+                  <input type="range" class="form-range" min="0" max="1" step="0.01" value="0.50" id="threshold" name="umbral">
                 </div>
               </div>
 
