--- a/templates/index.html
+++ b/templates/index.html
@@ -48,5 +48,15 @@
       }
     });
   </script>
+  <hr class="my-5" />
+    <h2 class="text-center">📊 Estadísticas de predicciones</h2>
+    <div class="row">
+      <div class="col-md-6">
+        {{ graph_bar|safe }}
+      </div>
+      <div class="col-md-6">
+        {{ graph_pie|safe }}
+      </div>
+  </div>
 </body>
 </html>
