--- a/templates/index.html
+++ b/templates/index.html
@@ -58,5 +58,12 @@
         {{ graph_pie|safe }}
       </div>
   </div>
+  
+  <script>
+    setInterval(() => {
+      window.location.reload();
+    }, 10000); // cada 10 segundos
+  </script>
+  
 </body>
 </html>
