--- a/templates/index.html
+++ b/templates/index.html
@@ -52,10 +52,10 @@
     <h2 class="text-center">📊 Estadísticas de predicciones</h2>
     <div class="row">
       <div class="col-md-6">
-        {{ graph_bar|safe }}
+        <div id="barGraph">Cargando gráfico de barras...</div>
       </div>
       <div class="col-md-6">
-        {{ graph_pie|safe }}
+        <div id="pieGraph">Cargando gráfico de pastel...</div>
       </div>
   </div>
   
